--- a/src/main/java/com/kffekko_report/ui/ImportPanel.form
+++ b/src/main/java/com/kffekko_report/ui/ImportPanel.form
@@ -135,7 +135,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="/Users/akil/NetBeansProjects/sql-file-format-symbol.png"/>
+              <Image iconType="3" name="/sql.png"/>
             </Property>
           </Properties>
         </Component>
@@ -195,7 +195,7 @@
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="/Users/akil/NetBeansProjects/excel.png"/>
+              <Image iconType="3" name="/excel.png"/>
             </Property>
           </Properties>
         </Component>
