--- a/src/main/java/com/kffekko_report/ui/ReportPanel.form
+++ b/src/main/java/com/kffekko_report/ui/ReportPanel.form
@@ -271,7 +271,7 @@
         <Component class="javax.swing.JLabel" name="jLabel13">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="/Users/akil/NetBeansProjects/pdf.png"/>
+              <Image iconType="3" name="/pdf.png"/>
             </Property>
           </Properties>
         </Component>
@@ -313,7 +313,7 @@
         <Component class="javax.swing.JLabel" name="jLabel15">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="/Users/akil/NetBeansProjects/word (1).png"/>
+              <Image iconType="3" name="/word.png"/>
             </Property>
           </Properties>
           <Events>
