--- a/src/main/java/com/kffekko_report/jasperreport/models/i.0.jrxml
+++ b/src/main/java/com/kffekko_report/jasperreport/models/i.0.jrxml
@@ -16,6 +16,9 @@
 	<parameter name="parameter1" class="java.lang.String"/>
 	<parameter name="EXPORT_TYPES" class="java.lang.String"/>
 	<parameter name="EXPORT_SPE" class="java.lang.String"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT COUNT(poids.no_Formule) as nb_emise,
 (SELECT COUNT(poids_recu.no_Formule)
